chore: altera a linha 179 para atualização de texto

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <span class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded">Docker</span>
                             </div>
                             <div class="flex space-x-4 mt-auto">
-                                <a href="https://github.com/WashingtonDDS/agendadorDeConsultasCDB" target="_blank" class="text-cyan-400 hover:underline">Ver Repositório</a>
+                                <a href="https://github.com/WashingtonDDS/agendadorDeConsultasCDB" target="_blank" class="text-cyan-400 hover:underline">Ver no GitHub</a>
                             </div>
                         </div>
                     </div>
