chore: altera a linha 79 para atualização de texto

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-8">Sobre Mim</h2>
                 <div class="flex flex-col md:flex-row items-center justify-center gap-10">
-                    <img src="https://placehold.co/200x200/1F2937/7DD3FC?text=Sua+Foto" alt="Foto de Washington Luiz" class="rounded-full w-48 h-48 object-cover border-4 border-cyan-400">
+                    <img src="./DDS.jpg"alt="Foto de Washington Luiz" class="rounded-full w-48 h-48 object-cover border-4 border-cyan-400">
                     <div class="max-w-2xl text-left">
                         <p class="text-gray-300 mb-6">
                             Sou um desenvolvedor apaixonado por tecnologia e por resolver problemas. Com experiência sólida em todo o ciclo de vida de desenvolvimento de software, trabalho com diversas tecnologias para criar aplicações robustas e intuitivas. Tenho um perfil proativo, sempre buscando aprender novas ferramentas e aprimorar minhas habilidades para entregar o melhor resultado possível.
