--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                     
                     <div class="bg-gray-900 rounded-lg overflow-hidden project-card flex flex-col">
-                        <img src="https://placehold.co/600x400/111827/7DD3FC?text=API+Pessoas" alt="Imagem do Projeto API REST com Spring Boot" class="w-full h-48 object-cover">
+                        <img src="https://placehold.co/600x400/111827/7DD3FC?text=Agendador+De+Consultas" alt="Imagem do Projeto API REST com Spring Boot" class="w-full h-48 object-cover">
                         <div class="p-6 flex flex-col flex-grow">
                             <h3 class="text-xl font-bold mb-2">API Agendador De ConsultasCDB</h3>
                             <p class="text-gray-400 mb-4 flex-grow">
