feat(projetos): adicionar vitrine de projeto com Firebase e atualizar ícones de tecnologias

--- a/index.html
+++ b/index.html
@@ -273,6 +273,14 @@
             </div>
             <div class="flex flex-col items-center tech-icon">
               <img
+                src="https://placehold.co/64x64/FFFFFF/000000?text=Fire"
+                alt="Firebase"
+                class="h-16 w-16 mb-2 rounded-lg"
+              />
+              <span>Firebase</span>
+            </div>
+            <div class="flex flex-col items-center tech-icon">
+              <img
                 src="https://placehold.co/64x64/FFFFFF/000000?text=Supa"
                 alt="Supabase"
                 class="h-16 w-16 mb-2 rounded-lg"
@@ -289,6 +297,52 @@
             Projetos em Destaque
           </h2>
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div
+              class="bg-gray-900 rounded-lg overflow-hidden project-card flex flex-col"
+            >
+              <img
+                src="https://placehold.co/600x400/111827/7DD3FC?text=Love+Cake"
+                alt="Imagem do Projeto Love Cake Confeitaria"
+                class="w-full h-48 object-cover"
+              />
+              <div class="p-6 flex flex-col flex-grow">
+                <h3 class="text-xl font-bold mb-2">Love Cake - Loja Virtual</h3>
+                <p class="text-gray-400 mb-4 flex-grow">
+                  Uma vitrine virtual e sistema de pedidos para uma confeitaria.
+                  A plataforma permite a gestão completa do catálogo,
+                  personalização de bolos e doces, e finalização de pedidos via
+                  WhatsApp. Desenvolvida com HTML, JavaScript e Firebase para
+                  uma experiência em tempo real.
+                </p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                  <span
+                    class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                    >HTML</span
+                  >
+                  <span
+                    class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                    >JavaScript</span
+                  >
+                  <span
+                    class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                    >Firebase</span
+                  >
+                  <span
+                    class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                    >Tailwind CSS</span
+                  >
+                </div>
+                <div class="flex space-x-4 mt-auto">
+                  <a
+                    href="https://lovecake-confeitaria.com.br/"
+                    target="_blank"
+                    class="text-cyan-400 hover:underline"
+                    >Ver Trabalho</a
+                  >
+                </div>
+              </div>
+            </div>
+
             <div
               class="bg-gray-900 rounded-lg overflow-hidden project-card flex flex-col"
             >
