refactor(portfolio): Ajusta descrição de projeto para consistência visual
A descrição do projeto "API Agendador De Consultas" utilizava uma lista de itens, o que tornava o card do projeto muito mais alto que os demais no carrossel, quebrando a harmonia visual da seção.

Este commit refatora a descrição para um único parágrafo conciso. A mudança equaliza a altura dos cards, melhorando o layout e a experiência do usuário, sem remover as informações técnicas essenciais do projeto.

--- a/index.html
+++ b/index.html
@@ -402,14 +402,17 @@
                 />
                 <div class="p-6 flex flex-col flex-grow">
                   <h3 class="text-xl font-bold mb-2">
-                    API Agendador De ConsultasCDB
+                    API Agendador De Consultas
                   </h3>
                   <p class="text-gray-400 mb-4 flex-grow">
-                    Sistema backend para gerenciamento de consultas médicas,
-                    desenvolvido com Arquitetura Hexagonal e persistência via
-                    JDBC puro, sem uso de ORMs. Essa abordagem garante maior
-                    controle, transparência e performance nas queries SQL.
+                    API REST para agendamento de consultas, construída com
+                    <strong>Arquitetura Hexagonal</strong> para desacoplamento
+                    do core, <strong>JDBC puro</strong> para performance e
+                    seguindo princípios de <strong>Clean Code</strong> e
+                    <strong>SOLID</strong> com uma suíte de testes robusta para
+                    garantir a confiabilidade do sistema.
                   </p>
+
                   <div class="flex flex-wrap gap-2 mb-4">
                     <span
                       class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
@@ -427,14 +430,44 @@
                       class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
                       >Docker</span
                     >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >Arquitetura Hexagonal</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >JUnit 5</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >Mockito</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >JaCoCo</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >SonarQube</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >Clean Code</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >Design Patterns</span
+                    >
                   </div>
+
                   <div class="flex space-x-4 mt-auto">
                     <a
                       href="https://github.com/WashingtonDDS/agendadorDeConsultasCDB"
                       target="_blank"
                       class="text-cyan-400 hover:underline"
-                      >Ver no GitHub</a
                     >
+                      Ver no GitHub
+                    </a>
                   </div>
                 </div>
               </div>
