--- a/index.html
+++ b/index.html
@@ -348,6 +348,53 @@
                 class="bg-gray-900 rounded-lg overflow-hidden project-card flex flex-col"
               >
                 <img
+                  src="https://placehold.co/600x400/111827/7DD3FC?text=Hamburgueria"
+                  alt="Imagem do Projeto Oficina dos Lanches"
+                  class="w-full h-48 object-cover"
+                />
+                <div class="p-6 flex flex-col flex-grow">
+                  <h3 class="text-xl font-bold mb-2">
+                    Oficina dos Lanches - Cardápio Digital
+                  </h3>
+                  <p class="text-gray-400 mb-4 flex-grow">
+                    Um sistema completo de cardápio digital e pedidos para
+                    hamburguerias. Inclui interface para clientes e um painel
+                    administrativo para gerenciamento de produtos, pedidos e
+                    configurações, com integração direta ao WhatsApp e backend
+                    no Firebase.
+                  </p>
+                  <div class="flex flex-wrap gap-2 mb-4">
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >HTML</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >JavaScript</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >Firebase</span
+                    >
+                    <span
+                      class="bg-cyan-900/50 text-cyan-300 text-xs font-semibold px-2.5 py-0.5 rounded"
+                      >Tailwind CSS</span
+                    >
+                  </div>
+                  <div class="flex space-x-4 mt-auto">
+                    <a
+                      href="https://github.com/WashingtonDDS/E-commerceOficinaDosLanches"
+                      target="_blank"
+                      class="text-cyan-400 hover:underline"
+                      >Ver Trabalho</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div
+                class="bg-gray-900 rounded-lg overflow-hidden project-card flex flex-col"
+              >
+                <img
                   src="https://placehold.co/600x400/111827/7DD3FC?text=Love+Cake"
                   alt="Imagem do Projeto Love Cake Confeitaria"
                   class="w-full h-48 object-cover"
