feat: adicionado link do site

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                   </div>
                   <div class="flex space-x-4 mt-auto">
                     <a
-                      href="https://github.com/WashingtonDDS/E-commerceOficinaDosLanches"
+                      href="https://oficinadoslanches.com.br/"
                       target="_blank"
                       class="text-cyan-400 hover:underline"
                       >Ver Trabalho</a
